--- a/sass/components/selection/_selection-goal.scss
+++ b/sass/components/selection/_selection-goal.scss
@@ -19,7 +19,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("./sass/img/1/Header_img1.jpg");
+    url("./img/1/Header_img1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -34,7 +34,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./sass/img/1/Header_img1.jpg");
+      url("./img/1/Header_img1.jpg");
     background-size: 480px 400px;
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
