--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 *,
 *::after,
@@ -16,6 +17,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-family: "Oleo Script", cursive;
   font-family: "Raleway", sans-serif;
+  overflow-x: auto;
   &.modal-open {
     overflow: hidden;
   }
@@ -48,10 +50,24 @@ img {
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
-    margin-left: 188px;
-    margin-right: 188px;
   }
 }
+.containerr {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
 .selection {
   padding: 60px 0px;
   @media screen and (min-width: 480px) {
