--- a/sass/components/madals/_madal-information.scss
+++ b/sass/components/madals/_madal-information.scss
@@ -1,9 +1,11 @@
 .formss {
   position: absolute;
   display: block;
-  left: 40;
   top: 40;
   width: 370px;
+  @media screen and (max-width: 479px) {
+    width: 80%;
+  }
   @media screen and (min-width: $desctorp) {
     width: 448px;
   }
@@ -19,7 +21,7 @@
   }
 }
 .modal-forms {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   position: relative;
   transition: 250ms $timing-function;
   & label {
@@ -67,6 +69,9 @@
     &:focus + .modal-forms__label {
       color: #2196f3;
       transition: 250ms var(--timing-function);
+    }
+    @media screen and (max-width: 479px) {
+      width: 100%;
     }
   }
   &__img {
