--- a/sass/components/paga-heder/_page-heder.scss
+++ b/sass/components/paga-heder/_page-heder.scss
@@ -82,6 +82,7 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
+  transition: 250ms $timing-function;
   @media screen and (max-width: 767.5px) {
     background: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
@@ -92,6 +93,7 @@
     left: 0;
     width: 100%;
     z-index: 2;
+    transition: 250ms $timing-function;
 
     &.is-open {
       display: block;
@@ -190,6 +192,7 @@
     line-height: 47px;
     text-align: center;
     color: #212121;
+    transition: 250ms $timing-function;
     &--color {
       color: $accent-color;
     }
@@ -206,6 +209,7 @@
       font-size: 34px;
       line-height: 40px;
       color: #757575;
+      transition: 250ms $timing-function;
       &:hover {
         color: $accent-color;
       }
@@ -220,6 +224,7 @@
       font-size: 24px;
       line-height: 28px;
       color: #757575;
+      transition: 250ms $timing-function;
       &:hover {
         color: $accent-color;
       }
@@ -235,6 +240,7 @@
       line-height: 47px;
       text-align: center;
       color: #212121;
+      transition: 250ms $timing-function;
       &--color {
         color: $accent-color;
       }
@@ -251,6 +257,7 @@
         font-size: 34px;
         line-height: 40px;
         color: #757575;
+        transition: 250ms $timing-function;
         &:hover {
           color: $accent-color;
         }
@@ -265,6 +272,7 @@
         font-size: 24px;
         line-height: 28px;
         color: #757575;
+        transition: 250ms $timing-function;
         &:hover {
           color: $accent-color;
         }
@@ -276,6 +284,7 @@
     @media screen and (min-width: $tablet) {
       font-size: 14px;
       line-height: 16px;
+      transition: 250ms $timing-function;
       &--color {
         position: relative;
       }
@@ -300,6 +309,7 @@
       &--size {
         font-size: 12px;
         line-height: 14px;
+        transition: 250ms $timing-function;
         &:hover {
           fill: $accent-color;
         }
@@ -310,6 +320,7 @@
       &--sizze {
         font-size: 12px;
         line-height: 14px;
+        transition: 250ms $timing-function;
         &:hover {
           fill: $accent-color;
         }
@@ -321,12 +332,15 @@
     @media screen and (min-width: $desctorp) {
       font-size: 14px;
       line-height: 16px;
+      transition: 250ms $timing-function;
       &--size {
         font-size: 14px;
         line-height: 16px;
+        transition: 250ms $timing-function;
         &--sizze {
           font-size: 14px;
           line-height: 16px;
+          transition: 250ms $timing-function;
         }
       }
     }
