--- a/sass/components/selection/_selection-clients.scss
+++ b/sass/components/selection/_selection-clients.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   padding-left: 0px;
+  justify-content: center;
 }
 .client {
   &__icon {
@@ -26,12 +27,12 @@
     justify-content: space-around;
     align-content: center;
     flex-wrap: wrap;
-    width: 210px;
     height: 92px;
     border: 1px solid #afb1b8;
     box-sizing: border-box;
     border-radius: 4px;
     fill: #afb1b8;
+    transition: 250ms $timing-function;
     &:hover,
     &:focus {
       border: 1px solid $accent-color;
@@ -40,6 +41,7 @@
     &--location {
       display: flex;
       justify-content: flex-start;
+      transition: 250ms $timing-function;
     }
     @media screen and (min-width: $mobile) {
       display: flex;
@@ -53,6 +55,7 @@
       box-sizing: border-box;
       border-radius: 4px;
       fill: #afb1b8;
+      transition: 250ms $timing-function;
       &:hover,
       &:focus {
         border: 1px solid $accent-color;
@@ -61,6 +64,7 @@
       &--location {
         display: flex;
         justify-content: flex-start;
+        transition: 250ms $timing-function;
       }
     }
     @media screen and (min-width: $tablet) {
@@ -75,6 +79,7 @@
       box-sizing: border-box;
       border-radius: 4px;
       fill: #afb1b8;
+      transition: 250ms $timing-function;
       &:hover,
       &:focus {
         border: 1px solid $accent-color;
@@ -83,6 +88,7 @@
       &--location {
         display: flex;
         justify-content: flex-start;
+        transition: 250ms $timing-function;
       }
     }
     @media screen and (min-width: $desctorp) {
@@ -98,6 +104,7 @@
       box-sizing: border-box;
       border-radius: 4px;
       fill: #afb1b8;
+      transition: 250ms $timing-function;
       &:hover,
       &:focus {
         border: 1px solid $accent-color;
@@ -106,29 +113,24 @@
       &--location {
         display: flex;
         justify-content: flex-start;
+        transition: 250ms $timing-function;
       }
     }
   }
   &__item {
-    &:nth-child(1) {
-      margin-bottom: 30px;
-      margin-right: 30px;
-    }
+    margin-right: 15px;
+    margin-bottom: 15px;
     &:nth-child(2) {
-      margin-bottom: 30px;
-    }
-    &:nth-child(3) {
-      margin-bottom: 30px;
-      margin-right: 30px;
+      margin-right: 0px;
     }
     &:nth-child(4) {
-      margin-bottom: 30px;
+      margin-right: 0px;
     }
     &:nth-child(5) {
-      margin-bottom: 30px;
-      margin-right: 30px;
+      margin-bottom: 0px;
     }
     &:nth-child(6) {
+      margin-right: 0px;
       margin-bottom: 0px;
     }
     @media screen and (min-width: $mobile) {
