--- a/sass/components/selection/_selection-direction.scss
+++ b/sass/components/selection/_selection-direction.scss
@@ -77,11 +77,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   margin-bottom: 30px;
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: $mobile) and (max-width: 767px) {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
