--- a/sass/components/selection/_selection-goal.scss
+++ b/sass/components/selection/_selection-goal.scss
@@ -11,7 +11,7 @@
 }
 .selection-goal {
   display: block;
-  width: 480px;
+
   background-color: #2f303a;
   text-align: center;
   background-image: linear-gradient(
@@ -24,8 +24,8 @@
   background-position: center;
   background-size: cover;
   padding: 118px 0px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0px;
+  margin-right: 0px;
   @media screen and (min-width: $mobile) {
     width: 480px;
     height: 400px;
@@ -132,31 +132,31 @@
         url("../img/3@3x.jpg");
     }
   }
-}
-&__text {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 42px;
-  color: #fff;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  @media screen and (min-width: $mobile) {
+  &__text {
     font-family: Roboto;
     font-style: normal;
     font-weight: 900;
     font-size: 26px;
     line-height: 42px;
     color: #fff;
-  }
-  @media screen and (min-width: $desctorp) {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 60px;
-    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    @media screen and (min-width: $mobile) {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: 900;
+      font-size: 26px;
+      line-height: 42px;
+      color: #fff;
+    }
+    @media screen and (min-width: $desctorp) {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 60px;
+      color: #fff;
+    }
   }
 }
 .button_style {
