--- a/sass/components/madals/_madal.scss
+++ b/sass/components/madals/_madal.scss
@@ -6,11 +6,14 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms $timing-function;
-  padding: 93px 15px;
+  padding: 40px 15px;
   overflow-y: scroll;
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
+  }
+  @media screen and (min-width: $mobile) {
+    padding: 93px 15px;
   }
   @media screen and (min-width: $tablet) {
     padding: 0px;
@@ -24,6 +27,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  z-index: 2;
   &__bottome {
     position: absolute;
     right: 0;
@@ -37,6 +41,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     fill: black;
+    z-index: 4;
   }
   &__img {
     width: 11px;
