--- a/sass/components/paga-heder/_page-heder.scss
+++ b/sass/components/paga-heder/_page-heder.scss
@@ -36,6 +36,8 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    z-index: 1;
+
     & .novigation__close {
       display: none;
     }
@@ -47,11 +49,11 @@
     }
     &:hover {
       fill: $accent-color;
-      transition: 500ms $timing-function;
+      transition: fill 500ms $timing-function;
     }
     &:focus {
       fill: $accent-color;
-      transition: opacity 250ms $timing-function;
+      transition: fill 250ms $timing-function;
     }
     @media screen and (min-width: $tablet) {
       display: none;
@@ -82,21 +84,25 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
-
+  transition: trasform 250ms $timing-function;
   @media screen and (max-width: 767.5px) {
     background: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 1px 3px rgba(0, 0, 0, 0.16);
     display: none;
-    position: absolute;
-    top: 100%;
+    position: fixed;
+    top: 10%;
     left: 0;
-    width: 100%;
-    z-index: 2;
+    width: 100vw;
+    height: 200vw;
+    overflow-y: hidden;
+    transform: translateY(60px);
 
     &.is-open {
       display: block;
-      transition: 500ms $timing-function;
+      overflow-y: hidden;
+      transform: translateY(-60px);
+      transition: transform 500ms $timing-function;
     }
   }
   @media screen and(min-width: $tablet) {
@@ -108,7 +114,7 @@
   }
   &__list {
     @media screen and (max-width: 767.5px) {
-      margin-bottom: 306px;
+      margin-bottom: 100px;
       padding-left: 40px;
     }
     @media screen and (min-width: $tablet) {
@@ -188,7 +194,8 @@
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
-    font-size: 40px;
+
+    font-size: 34px;
     line-height: 47px;
     text-align: center;
     color: #212121;
@@ -206,7 +213,7 @@
       font-family: Roboto;
       font-style: normal;
       font-weight: 500;
-      font-size: 34px;
+      font-size: 30px;
       line-height: 40px;
       color: #757575;
       transition: 250ms $timing-function;
@@ -221,7 +228,7 @@
       font-family: Roboto;
       font-style: normal;
       font-weight: 500;
-      font-size: 24px;
+      font-size: 20px;
       line-height: 28px;
       color: #757575;
       transition: 250ms $timing-function;
